--- a/src/App.css
+++ b/src/App.css
@@ -2,10 +2,7 @@
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
+
 
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
@@ -24,8 +21,20 @@
   color: white;
 }
 
+.butond{
+  margin-left: 46px;
+  margin-top: 25px;
+  width: 100px;
+}
 .App-link {
-  color: #61dafb;
+  color:red;
+}
+.login-wrapper {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  color: red;
+  
 }
 
 @keyframes App-logo-spin {
