--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,9 @@
 body {
+  background-image: url("https://img.freepik.com/free-vector/dark-gradient-background-with-copy-space_53876-99548.jpg");
+  background-repeat: no-repeat;
+    text-align: center;
+  background-size: cover;
+    background-color: #6B6B6B;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
